# f405-options-bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRACT.md  LICENSE  README.md  config.example.yaml  pyproject.toml  score.py
.github/classroom/: autograding.json
.github/workflows/: autograde.yml  poll-leaderboard.yml
botkit/: __init__.py  broker.py  config.py  deribit.py  feed.py  journal.py  portfolio.py  pricing.py  risk.py  runner.py  strategy.py  types.py
ci/: assert_score.py
data/: deribit_snapshot.json
docs/: ASSIGNMENT.md  ASSIGNMENT_BLURB.md  CLASSROOM_SETUP.md  INSTRUCTOR_GRADING.md  RUBRIC.md
leaderboard/: README.md  schema.sql
leaderboard/poller/: .gitignore  poll.py  roster.example.json  seed_demo.py
leaderboard/web/: .env.example  .gitignore  package.json  pnpm-lock.yaml
leaderboard/web/app/: globals.css  layout.tsx  page.tsx
leaderboard/web/components/: Sparkline.tsx
leaderboard/web/lib/: db.ts
notebooks/: 00_quickstart.ipynb  01_baselines_walkthrough.ipynb
strategies/: __init__.py  template.py
strategies/baselines/: __init__.py  buy_and_hold_call.py  delta_hedged_vol_seller.py  naive_short_straddle.py
tests/: conftest.py  test_pricing.py  test_score.py  test_sim_smoke.py
tests/fixtures/blowup/: equity.csv
tests/fixtures/healthy/: equity.csv
