[project]
name = "f405-options-bot"
version = "0.1.0"
description = "Starter kit: an autonomous BTC weekly-options paper-trading bot on Deribit testnet (IBA F405)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
    "httpx>=0.27",
    "plotly>=5.20",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "botkit"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "jupyter>=1.1",
    "nbconvert>=7.16",
    "nbformat>=5.10",
]
